--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ canvas {
   justify-content: center;
   margin-top: 10px;
   flex-wrap: wrap;
+  margin-bottom: 5px;
 }
 
 .legend-item {
@@ -101,6 +102,16 @@ canvas {
   margin-right: 5px;
   border-radius: 3px;
   border: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+/* Sub-legend for additional explanations */
+.sub-legend {
+  text-align: center;
+  margin-top: 5px;
+  font-size: 14px;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 /* Visualizations container */
